--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<button type="button" routerLink="login" name="button">Login</button>
+<!-- <button type="button" routerLink="login" name="button">Login</button>
 <button type="button" routerLink="admin" name="button">Admin</button>
 <button type="button" routerLink="" name="button">Home</button>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+<h1>welcome to my page</h1>
